--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -363,12 +363,12 @@ jobs:
       - run:
           name: embuilder (PIC)
           command: |
-            EMCC_CORES=4 python3 ~/emscripten/embuilder.py build libc++ libc++_noexcept al --pic
+            EMCC_CORES=4 python3 ~/emscripten/embuilder.py build SYSTEM --pic
             python3 ~/emscripten/tests/runner.py test_hello_world
       - run:
           name: embuilder (PIC+LTO)
           command: |
-            EMCC_CORES=4 python3 ~/emscripten/embuilder.py build SYSTEM --pic --lto
+            EMCC_CORES=4 python3 ~/emscripten/embuilder.py build libc++ libc++_noexcept al --pic --lto
             python3 ~/emscripten/tests/runner.py test_hello_world
       - run:
           name: freeze cache
